--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     {
       "name": "Basti Buck",
       "email": "mail@bastibuck.de",
-      "homepage": "http://www.bastibuck.de",
+      "homepage": "http://bastibuck.de",
       "role": "Developer"
     }
   ],
