--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "bastibuck/contao-ab-testing",
-  "type": "contao-module",
+  "type": "contao-bundle",
   "description": "A/B testing with Contao Open Source CMS",
   "keywords": [
     "AB",
@@ -23,9 +23,7 @@
     "issues": "https://github.com/bastibuck/contao-ab_testing/issues"
   },
   "require": {
-    "php": ">=5.4.0",
-    "contao/core-bundle": "~3.5 || ~4.1",
-    "contao-community-alliance/composer-plugin": "~2.4 || ~3.0"
+    "contao/core-bundle": "~4.1"
   },
   "autoload": {
     "classmap": [
