--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "testing"
   ],
   "homepage": "https://github.com/bastibuck/contao-ab_testing",
-  "license": "LGPL-3.0+",
+  "license": "LGPL-3.0-or-later",
   "authors": [
     {
       "name": "Basti Buck",
