--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "AB test",
     "landingpage",
     "landing page",
-    "testing"
+    "testing",
+    "ab testing",
+    "conversion rate",
+    "online marketing"
   ],
   "homepage": "https://github.com/bastibuck/contao-ab_testing",
   "license": "LGPL-3.0-or-later",
