--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "issues": "https://github.com/bastibuck/contao-ab_testing/issues"
   },
   "require": {
-    "contao/core-bundle": "~4.1"
+    "contao/core-bundle": "^4.9"
   },
   "autoload": {
     "psr-4": {
